--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "henhed/module-piwik",
-    "description": "Piwik analytics module for Magento 2",
+    "name": "k4ndari/module-piwik",
+    "description": "Piwik analytics module for Magento 2. Fork of henkelund/magento2-henhed-piwik for php 7.3",
     "type": "magento2-module",
     "license": [
         "AGPL-3.0+"
